--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
   --blue: hsl(209, 100%, 50%);
   --black-darkest: hsl(0, 0%, 0%);
   --black: hsl(0, 0%, 7.06%);
-  --black-light: hsl(0, 0%, 15%);
+  --black-light: hsla(0, 100%, 100%, 2%);
   --white: hsl(0, 0%, 100%);
 }
 
@@ -15,8 +15,8 @@ html,
 body,
 .App {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   background: var(--black);
   color: var(--white);
