--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* variables */
 :root {
-  --blue: hsl(209, 100%, 50%);
+  --primary: #00aef0;
   --black-darkest: hsl(0, 0%, 0%);
   --black: hsl(0, 0%, 7.06%);
   --black-light: hsla(0, 100%, 100%, 2%);
@@ -15,8 +15,8 @@ html,
 body,
 .App {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   background: var(--black);
   color: var(--white);
